force-app/main/default/objects/deal_details__c/deal_details__c.object-meta.xml
<CustomObject>
    <label>deal detail</label>
    <nameField>
        <label>deal details Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>deal details</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>