force-app/main/default/objects/deal_details__c/fields/Deal_ID__c.field-meta.xml
<CustomField>
    <fullName>Deal_ID__c</fullName>
    <description>enter Deal ID</description>
    <label>Deal ID</label>
    <length>100</length>
    <type>Text</type>
</CustomField>