force-app/main/default/objects/deal_details__c/fields/panel_code__c.field-meta.xml
<CustomField>
    <fullName>panel_code__c</fullName>
    <label>panel code</label>
    <length>100</length>
    <type>Text</type>
</CustomField>