force-app/main/default/objects/deal_details__c/fields/product_type__c.field-meta.xml
<CustomField>
    <fullName>product_type__c</fullName>
    <label>product type</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>LED</fullName>
            </value>
            <value>
                <fullName>LCD</fullName>
            </value>
            <value>
                <fullName>Plasma</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>