force-app/main/default/objects/deal_details__c/fields/service_vendor_num__c.field-meta.xml
<CustomField>
    <fullName>service_vendor_num__c</fullName>
    <label>service vendor num</label>
    <type>Phone</type>
</CustomField>