force-app/main/default/objects/deal_details__c/fields/warranty_num__c.field-meta.xml
<CustomField>
    <fullName>warranty_num__c</fullName>
    <label>warranty num</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>